--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,73 +1,71 @@
-primary_name: "Rongsheng Wang"
+primary_name: "Yueqi Wang"
 secondary_name: ""
-navbar_name: "Rongsheng Wang's Home Page"
+navbar_name: "Yueqi Wang's Home Page"
 
 positions:
-  - '<span class="no-break"><img src="assets/images/badges/mpu_master.png" alt="Macao Polytechnic University" class="inline-badge"/></span> M.S., Macao Polytechnic University (2024)'
+  - '<span class="no-break"><img src="assets/images/badges/mpu_master.png" alt="Zhejiang University" class="inline-badge"/></span> M.S., Zhejiang University (2023)'
 
-email: "wang.rongsheng@outlook.com"
-gscholar: SSaBaioAAAAJ
-sscholar: Rongsheng-Wang/2261313297
-github: wangrongsheng
-twitter: RongshengWang
+email: "Yueqi1.23@intl.zju.edu.cn"
+gscholar: duttIDwAAAAJ
+github: yueqi997
+twitter: Yueqi_Wang1
 # wechat_qrcode: assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-zhihu: wang-rong-sheng-74
-resume: assets/cv/Resume_RongshengWang.pdf
+# resume: assets/cv/Resume_RongshengWang.pdf
 # linkedin: your-linked-in-id
 # orcid: 0000-0000-0000-0000
 
 short_bio: >-
-  I am Rongsheng Wang, I used to study at Macao Polytechnic University (MPU) and work under the supervision of Prof.<a href="https://scholar.google.com/citations?hl=zh-CN&user=lLg3WRkAAAAJ">Tao Tan</a>. My research interests are computer vision, LLM, trusted LLM, RAG, and Agent systems. I am also interested in generative data research. I am currently seeking a PhD opportunity. <br> I publish a lot of open source projects on <a href="https://github.com/WangRongsheng">🔗Github</a> <img alt="GitHub User's stars" src="https://img.shields.io/github/stars/wangrongsheng?style=flat-square">. I shared some of the datasets and model weights used by the project at <a href="https://huggingface.co/wangrongsheng">🔗HuggingFace</a>. I likewise like to post some small-parameter LM at <a href="https://ollama.com/wangrongsheng">🔗Ollama</a> to help people use it locally.
+  I am Yueqi, a second-year graduate student at Zhejiang University, working under the supervision of <a href="https://scholar.google.com/citations?hl=zh-CN&user=bPJgdNIAAAAJ">Prof. Di Chen</a>. My research interests focus on post-transcriptional regulation in early embryonic development, human embryonic stem cell pluripotency, and the application of bioinformatics methods in early embryonic development research. I am always open to academic collaborations and discussions in the fields of stem cell biology, developmental biology, and bioinformatics.
 
 show_portrait: true
 portrait_url: assets/images/photos/55651568.jpeg
 portrait_caption: >-
-  我是王荣胜，欢迎访问我的主页~
+  我是王乐琦，欢迎访问我的主页~
 
 education:
-- name: Macao Polytechnic University
+- name: Zhejiang University
   logo: assets/images/badges/mpu_master.png
-  position: M.S. in Big Data and Internet of Things
-  date: Sep. 2022 - Jul. 2024
-- name: Henan Polytechnic University
+  position: M.S. in basic medicine
+  date: Sep. 2023 - Now
+- name: Shanghai Normal University
   logo: assets/images/badges/hpu_bs.png
-  position: B.S. in Computer Science (AI)
-  date: Sep. 2018 - Jul. 2022
+  position: B.S. in Biological Science
+  date: Sep. 2019 - Jul. 2023
   
 experience:
-- name: Qiyuan.Tech
+- name: ISSCR
   logo: assets/images/badges/qiyuan.png
-  position: CTO, Reasercher
-  date: Oct. 2023 - Now
-- name: HKUST (GZ) 
+  position: Ambassador
+  date: 2024 - 2025
+- name: Pfizer
   logo: assets/images/badges/hkust-gz.png
-  position: Research Assistant (Supervisor is <a href="https://web.archive.org/web/20240717103203/https://facultyprofiles.hkust-gz.edu.cn/faculty-personal-page/BAI-Yun/yunbai">Yun Bai</a> and <a href="https://cee.rutgers.edu/xiang-liu">Xiang Liu</a>)
-  date: Feb. 2024 -	May 2024
+  position: Marketing Department Intern
+  date: 2022 - 2023
+# - name: Youth Volunteers' Association
+#   logo: assets/images/badges/hkust-gz.png
+#   position: President
+#   date: 2020 - 2021
 
 
 awards:
-- name: Outstanding Award of JingDong Health - Global AI Innovation Competition
+- name: National Graduate Scholarship
   date: 2024
-- name: First Prize of Baidu PaddlePaddle AGI Hackathon
+- name: Outstanding Graduate Student 
   date: 2024
-- name: Third Prize of Digital Medical Technology and Application Innovation Competition
+- name: Outstanding Graduate Student Leader
+  date: 2024
+- name: Youth Travel Award at the 2024 National Conference on Cell Biology
+  date: 2024
+- name: Bronze Award at the 7th "Internet+" College Student Innovation and Entrepreneurship Competition (National Level)
   date: 2023
-- name: Third Prize of Baichuan Intelligence and Amazon Cloud AGI Hackathon
-  date: 2023
-- name: Silver of Kaggle RSNA Screening Mammography Breast Cancer Detection
-  date: 2023
-- name: Outstanding Award of IEEE UV 2022 "Vision Meets Algae" Object Detection Challenge
-  date: 2022
-- name: <a href="https://www.paddlepaddle.org.cn/ppdemd?n=/ppdemd/%E7%8E%8B%E8%8D%A3%E8%83%9C">Baidu PaddlePaddle Developers Experts</a>
-  date: 2021
 
-service:
-- name: Reviewer of <a href="https://www.embs.org/jbhi/">Journal of Biomedical and Health Informatics (JBHI)</a>
-- name: Reviewer of <a href="https://2025.ieeeicme.org/">ICME 2025</a>
+# service:
+# - name: Reviewer of <a href="https://www.embs.org/jbhi/">Journal of Biomedical and Health Informatics (JBHI)</a>
+# - name: Reviewer of <a href="https://2025.ieeeicme.org/">ICME 2025</a>
 
 # Feel free to replace the footer text if you would like to, but I will greatly appreciate it 
 # if you keep the link to the template so that more people can benefit from it. Thanks!
 footer_text: >-
-  Copyright © 2024 <a href="https://github.com/WangRongsheng" target="_blank">Rongsheng Wang</a>. All Rights Reserved.
+  Copyright © 2024 <a href="https://github.com/yueqi997" target="_blank">Yueqi Wang</a>. All Rights Reserved.
