--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -27,7 +27,7 @@ portrait_caption: >-
 education:
 - name: Zhejiang University
   logo: assets/images/badges/mpu_master.png
-  position: M.S. in basic medicine
+  position: M.S. in Basic Medicine
   date: Sep. 2023 - Now
 - name: Shanghai Normal University
   logo: assets/images/badges/hpu_bs.png
